添加jvm,linux安装jdk，docker简单部署笔记